<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="e_g_john">e.g. John</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flag_image">flag image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="image">Image</string>
</resources>